styles.css
@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");

/* Reset default styles */
body,
html {
  margin: 0;
  height: 100%;
}

html {
  scroll-behavior: smooth;
}

body {
  padding-top: 0;
  background-color: #f2f2f2;
  font-family: "Nunito Sans", sans-serif;
  color: #333;
  display: grid;
  grid-template-rows: auto 1fr auto;
  font-optical-sizing: auto;
}

h2 {
  text-align: center;
}

/* Header styles */
.navbar-dark .navbar-nav .nav-link {
  color: white !important;
}

header {
  text-align: center;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;
  height: 60px;
  overflow: hidden; /* This is needed to apply the border radius to the inner elements */
}

header nav a {
  color: white;
  margin: 0 10px;
  text-decoration: none;
  font-size: 18px;
}

.navbar-nav .nav-link:hover {
  color: green !important;
}

header h1 {
  margin: 0;
}

/* Main content styles */
main {
  padding-top: 60px;
}

section {
  display: flex;
  justify-content: center;
  align-items: center;
  scroll-margin-top: 60px;
  flex-direction: column;
  flex: 1;
}

section > div {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  margin: 20px 0; /* Add vertical margin */
  padding: 20px 0; /* Add vertical padding */
}

section ul {
  list-style-type: none;
  padding: 0;
  width: 100%; /* Take up the full width */
  box-sizing: border-box; /* Include padding and border in element's total width and height */
}

section ul li {
  margin-bottom: 10px;
  text-align: center; /* Center the text */
}

/* Other styles */
h1 {
  font-size: 36px;
  font-weight: bold;
  margin-bottom: 20px;
}

p,
li {
  color: #777;
}

.font-color {
  color: black;
}

.close {
  position: absolute;
  top: 15px;
  right: 35px;
  color: #f1f1f1;
  font-size: 40px;
  font-weight: bold;
  transition: 0.3s;
}

.close:hover,
.close:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
}

.navbar {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 100vh;
}

.card {
  transition: background-color 0.3s ease;
}

.card:hover {
  background-color: #f5f5f5;
}

/* About section */
#about {
  position: relative;
}

#about .fa-address-card {
  position: absolute; /* This allows the icon to be positioned relative to the about section */
  top: 10px; /* Adjust this value to move the icon vertically */
  right: 10px; /* Adjust this value to move the icon horizontally */
  font-size: 25px; /* Adjust the size of the icon */
}

#about:hover .fa-address-card {
  color: #008000; /* Change the color on hover */
  transition: color 0.3s ease; /* Add a transition effect */
}

.about-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  align-items: center;
  background-color: #f9f9f9;
  border-radius: 5px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease;
  position: relative;
  min-height: 450px;
  transition: all 0.3s ease;
}

#about .img-fluid {
  align-self: center; /* Align this item to the center */
  margin: 0 auto; /* Center the image horizontally */
}

.about-content:hover {
  box-shadow: 0 0 10px rgba(0, 128, 0, 0.3); /* darker green shadow on hover */
  transform: scale(1.05);
}

#about p {
  font-size: 1em; /* Use ems instead of pixels */
  max-width: 90%; /* Use percentage instead of pixels */
  margin: 0 auto;
}

.button-container {
  display: flex;
  gap: 20px;
  justify-content: center;
  padding: 20px;
}

.button {
  background-color: black;
  color: white;
  padding: 10px 20px;
  text-decoration: none;
  border-radius: 5px;
  transition: background-color 0.3s ease;
  outline: none;
  text-transform: uppercase;
}

.button:focus {
    border: none;
    outline: none;
  }

.button:hover {
  background-color: green;
  text-decoration: none;
  color: white;
  border: none;
}

.img-fluid {
  max-width: 150px;
  max-height: 150px;
  border-radius: 50%;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
  transition: all 0.3s ease;
  margin-right: 20px; /* Add space to the right of the image */
}

.about-icons {
  display: flex;
  flex-direction: row; /* Change this from column to row */
  font-size: 25px;
  transition: all 0.3s ease;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.about-icons a {
  color: black;
  transition: color 0.3s ease;
}

.about-icons a:hover {
  color: green;
}

/* Adjust the layout for smaller screens */
@media (max-width: 768px) {
  .about {
    padding: 1em; /* Use smaller padding */
  }

  .about h2 {
    font-size: 1.5em; /* Use smaller font size */
  }

  .about p {
    font-size: 0.9em; /* Use smaller font size */
    max-width: 100%; /* Make the text take up the full width */
  }

  section {
    flex-direction: row; /* Stack the items horizontally */
  }
}

/* Skills section */
.skills {
  margin-top: 20px;
}

#skillsCarousel {
  border-radius: 15px;
  background-color: #f9f9f9;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease;
  display: flex; /* Use Flexbox */
  flex-direction: column; /* Stack the children vertically */
  justify-content: center; /* Center the children vertically */
  align-items: center; /* Center the children horizontally */
  flex: 1; /* Make the carousel item take up as much vertical space as possible */
  min-height: 450px;
}

.carousel-item {
  height: 100%; /* make the carousel items fill the height of the carousel */
  display: flex;
  flex-direction: column;
  justify-content: flex-start; /* align the content to the top */
  align-items: center;
  position: relative;
}
/* ... */

